--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
       "!src/components/index.js",
       "!src/containers/index.js",
       "!src/state/index.js",
+      "!src/state/epics/index.js",
       "!src/utilities/index.js",
       "src/**/*.{js,jsx}",
       "!<rootDir>/node_modules/"
